UtahLiveDataTest/src/objects/ReviewPanelTemplate__c.object
<CustomObject>
    <description>[Business] Template defined for the Review</description>
    <fields>
        <fullName>AnnoucementId__c</fullName>
        <formula>ReviewStepTemplate__r.Announcement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AnnoucementId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutoAssignSubmittedApplication__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Announcement deadline reaches, all the applications will automatically get added to the review panel</inlineHelpText>
        <label>Auto Assign Submitted Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chair__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chair</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Review_Panel_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClonedFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <referenceTo>ReviewPanelTemplate__c</referenceTo>
        <relationshipName>Review_Panel_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DueDateOffset__c</fullName>
        <inlineHelpText>Offset is used to decide the due date when the Task Due Date is selected as Today + Offset</inlineHelpText>
        <label>Due Date Offset</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExcludeFromScoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupId__c</fullName>
        <inlineHelpText>When Announcement deadline reaches all the applications will be assigned to the users under this group Id.</inlineHelpText>
        <label>Group Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <inlineHelpText>When Announcement deadline reaches all the applications will be assigned to the users under this group.</inlineHelpText>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideDeleteButton__c</fullName>
        <formula>IsDefaultPanel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Delete Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePanelBtn__c</fullName>
        <formula>ISPICKVAL(ReviewStepTemplate__r.MultiplePanelsRequired__c,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Panel Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstructionsToReviewers__c</fullName>
        <label>Instructions to Reviewers (Obsolete)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsDefaultPanel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this Review Panel is default panel?</description>
        <label>Is Default Panel?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PanelLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which layout is used to render the review panel?</inlineHelpText>
        <label>Panel Layout</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipName>Review_Panel_Layout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReviewFormConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Review Form Config</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipName>Review_Panel_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewPackage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Review Package</label>
        <referenceTo>GNT__Package__c</referenceTo>
        <relationshipName>Review_Panel_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewStepTemplate__c</fullName>
        <label>Review Step Template</label>
        <referenceTo>ReviewStepTemplate__c</referenceTo>
        <relationshipName>Review_Panel_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ReviewerAssignNotificationTemplate__c</fullName>
        <inlineHelpText>This email template is used to send email notification to the reviewer to review the Application or PreApplication</inlineHelpText>
        <label>Reviewer Assign Notification Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReviewersCount__c</fullName>
        <label>ReviewersCount</label>
        <summaryForeignKey>PanelUserTemplate__c.ReviewPanelTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskDueDate__c</fullName>
        <inlineHelpText>Specify due date for the review tasks created under this review panel</inlineHelpText>
        <label>Task Due Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Panel End Date</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Today + Offset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isInternalReview__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isInternalReview</label>
        <type>Checkbox</type>
    </fields>
    <label>Review Panel</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AnnoucementId__c</columns>
        <columns>GroupId__c</columns>
        <columns>GroupName__c</columns>
        <columns>HidePanelBtn__c</columns>
        <columns>ReviewersCount__c</columns>
        <columns>ReviewFormConfig__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Panel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Panels</pluralLabel>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preapplication</fullName>
        <active>true</active>
        <label>Pre-Application</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>